--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.application.name=mysql-sakila-demo-server
 
+server.port=8280
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://192.168.1.8:8000
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/sakila
 spring.datasource.username=root
 spring.datasource.password=Basement99!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
